--- a/OPSC7311POE/app/src/main/res/layout/activity_view_tasks.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_view_tasks.xml
@@ -58,6 +58,7 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:layout_width="416dp"
             android:layout_height="105dp"
+            android:background="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
