--- a/OPSC7311POE/app/src/main/res/layout/activity_view_tasks.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_view_tasks.xml
@@ -29,9 +29,12 @@
         android:id="@+id/vertLayout"
         android:layout_width="409dp"
         android:layout_height="532dp"
+        android:layout_marginTop="68dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="198dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/createBtn"
