--- a/OPSC7311POE/app/src/main/res/layout/activity_timer.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_timer.xml
@@ -132,144 +132,186 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="111dp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_height="match_parent">
 
-
-        <LinearLayout
-            android:layout_width="415dp"
-            android:layout_height="84dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_NavBar"
+            android:layout_width="416dp"
+            android:layout_height="114dp"
+            android:layout_gravity="top"
             android:background="@color/white"
-            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.25">
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:layout_width="411dp"
+                android:layout_height="160dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    android:id="@+id/imageView16"
-                    android:layout_width="95dp"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.555"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/bottom_btn3" />
-
-                <TextView
-                    android:id="@+id/tv_Profile"
-                    android:layout_width="83dp"
-                    android:layout_height="21dp"
-                    android:layout_marginBottom="4dp"
-                    android:gravity="center"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="114dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="@string/profile" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/linearLayout2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.25">
-
-                <ImageView
-                    android:id="@+id/imageView15"
-                    android:layout_width="90dp"
-                    android:layout_height="53dp"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/house" />
-
-                <TextView
-                    android:id="@+id/tv_Home"
-                    android:layout_width="83dp"
-                    android:layout_height="21dp"
-                    android:layout_marginBottom="4dp"
-                    android:gravity="center"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.526"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="@string/home" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/linearLayout4"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.25">
-
-                <ImageView
-                    android:id="@+id/imageView18"
-                    android:layout_width="90dp"
-                    android:layout_height="54dp"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/baseline_calendar_month_24" />
-
-                <TextView
-                    android:id="@+id/tv_calendar"
-                    android:layout_width="83dp"
-                    android:layout_height="21dp"
-                    android:layout_marginBottom="4dp"
-                    android:gravity="center"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.473"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="@string/calendar" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/linearLayout5"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.25">
-
-                <ImageView
-                    android:id="@+id/imageView17"
-                    android:layout_width="91dp"
-                    android:layout_height="54dp"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/baseline_circle_notifications_24" />
-
-                <TextView
-                    android:id="@+id/tv_timer"
-                    android:layout_width="83dp"
-                    android:layout_height="21dp"
-                    android:layout_marginBottom="4dp"
-                    android:gravity="center"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.526"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="@string/timer" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </LinearLayout>
+                    app:layout_constraintStart_toStartOf="parent">
 
 
+                    <LinearLayout
+                        android:layout_width="416dp"
+                        android:layout_height="113dp"
+                        android:background="@color/white"
+                        android:orientation="horizontal"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/linearLayout"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.25">
+
+                            <TextView
+                                android:id="@+id/tv_Profile"
+                                android:layout_width="83dp"
+                                android:layout_height="21dp"
+                                android:layout_marginBottom="16dp"
+                                android:gravity="center"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.523"
+                                app:layout_constraintStart_toStartOf="parent"
+                                tools:text="@string/profile" />
+
+                            <ImageButton
+                                android:id="@+id/ib_Profile"
+                                android:layout_width="65dp"
+                                android:layout_height="70dp"
+                                android:layout_marginTop="4dp"
+                                android:background="@color/white"
+                                android:scaleType="centerInside"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.512"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:srcCompat="@drawable/navprofile"
+                                tools:ignore="SpeakableTextPresentCheck" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/linearLayout2"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.25">
+
+                            <TextView
+                                android:id="@+id/tv_Home"
+                                android:layout_width="83dp"
+                                android:layout_height="21dp"
+                                android:layout_marginBottom="16dp"
+                                android:gravity="center"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.523"
+                                app:layout_constraintStart_toStartOf="parent"
+                                tools:text="@string/home" />
+
+                            <ImageButton
+                                android:id="@+id/ib_Home"
+                                android:layout_width="65dp"
+                                android:layout_height="70dp"
+                                android:layout_marginTop="4dp"
+                                android:background="@color/white"
+                                android:scaleType="centerInside"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.512"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:srcCompat="@drawable/house"
+                                tools:ignore="SpeakableTextPresentCheck" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/linearLayout4"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.25">
+
+                            <TextView
+                                android:id="@+id/tv_calendar"
+                                android:layout_width="83dp"
+                                android:layout_height="21dp"
+                                android:layout_marginBottom="16dp"
+                                android:gravity="center"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.523"
+                                app:layout_constraintStart_toStartOf="parent"
+                                tools:text="@string/calendar" />
+
+                            <ImageButton
+                                android:id="@+id/ib_Calendar"
+                                android:layout_width="65dp"
+                                android:layout_height="70dp"
+                                android:layout_marginTop="4dp"
+                                android:background="@color/white"
+                                android:scaleType="centerInside"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.512"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:srcCompat="@drawable/calendar"
+                                tools:ignore="SpeakableTextPresentCheck" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/linearLayout5"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.25">
+
+                            <TextView
+                                android:id="@+id/tv_timer"
+                                android:layout_width="83dp"
+                                android:layout_height="21dp"
+                                android:layout_marginBottom="16dp"
+                                android:gravity="center"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.523"
+                                app:layout_constraintStart_toStartOf="parent"
+                                tools:text="@string/timer" />
+
+                            <ImageButton
+                                android:id="@+id/ib_Timer"
+                                android:layout_width="65dp"
+                                android:layout_height="70dp"
+                                android:layout_marginTop="4dp"
+                                android:background="@color/white"
+                                android:scaleType="centerInside"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.512"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:srcCompat="@drawable/timer"
+                                tools:ignore="SpeakableTextPresentCheck" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    </LinearLayout>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.bottomnavigation.BottomNavigationView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </LinearLayout>
