--- a/OPSC7311POE/app/src/main/res/layout/activity_monthly_summary.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_monthly_summary.xml
@@ -213,14 +213,15 @@
         android:id="@+id/idGraphView"
         android:layout_width="379dp"
         android:layout_height="278dp"
-        android:layout_below="@id/idTVHead"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="231dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TableLayout
         android:id="@+id/tlGraphData"
         android:layout_width="390dp"
-        android:layout_height="255dp"
+        android:layout_height="256dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toTopOf="@+id/cl_NavBar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -228,56 +229,112 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TableRow
-            android:layout_width="305dp"
-            android:layout_height="68dp">
+            android:layout_width="300dp"
+            android:layout_height="64dp">
 
             <TableRow
-                android:layout_width="215dp"
-                android:layout_height="match_parent" />
+                android:layout_width="195dp"
+                android:layout_height="64dp">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
             <TableRow
-                android:layout_width="177dp"
-                android:layout_height="match_parent" />
+                android:layout_width="195dp"
+                android:layout_height="64dp">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
         </TableRow>
 
         <TableRow
-            android:layout_width="207dp"
-            android:layout_height="match_parent">
+            android:layout_width="300dp"
+            android:layout_height="64dp">
 
             <TableRow
-                android:layout_width="215dp"
-                android:layout_height="match_parent" />
+                android:layout_width="match_parent"
+                android:layout_height="64dp">
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
             <TableRow
-                android:layout_width="177dp"
-                android:layout_height="match_parent" />
+                android:layout_width="match_parent"
+                android:layout_height="64dp">
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="300dp"
+            android:layout_height="64dp">
 
             <TableRow
-                android:layout_width="215dp"
-                android:layout_height="match_parent" />
+                android:layout_width="match_parent"
+                android:layout_height="64dp">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
             <TableRow
-                android:layout_width="177dp"
-                android:layout_height="match_parent" />
+                android:layout_width="150dp"
+                android:layout_height="64dp">
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="300dp"
+            android:layout_height="64dp">
 
             <TableRow
-                android:layout_width="215dp"
-                android:layout_height="match_parent" />
+                android:layout_width="match_parent"
+                android:layout_height="64dp">
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
             <TableRow
-                android:layout_width="177dp"
-                android:layout_height="match_parent" />
+                android:layout_width="150dp"
+                android:layout_height="64dp">
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
         </TableRow>
     </TableLayout>
 
