--- a/OPSC7311POE/app/src/main/res/layout/activity_timer.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_timer.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/skyblue"
-    tools:context=".Timer">
+    tools:context=".Timer_activity">
 
     <TextView
         android:id="@+id/tvTimer"
@@ -137,6 +137,7 @@
         android:layout_height="90dp"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
+        app:itemIconTint="@color/nav_item_color_state"
         android:scrollIndicators="left"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
