--- a/OPSC7311POE/app/src/main/res/layout/activity_insert_task.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_insert_task.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/skyblue"
-    tools:context=".InsertData">
+    tools:context=".InsertData_activity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -304,6 +304,7 @@
         android:layout_height="90dp"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
+        app:itemIconTint="@color/nav_item_color_state"
         android:scrollIndicators="left"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
