--- a/OPSC7311POE/app/src/main/res/layout/activity_total_cat_hours.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_total_cat_hours.xml
@@ -8,7 +8,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".WeeklySummary">
+    tools:context=".MonthlySummary">
 
     <!-- ImageView -->
 
@@ -133,6 +133,7 @@
         android:layout_height="90dp"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
+        app:itemIconTint="@color/nav_item_color_state"
         android:scrollIndicators="left"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
